Tap suppression controller forwards the next TapCancel when the stashed TapDown is forwarded.

When the controller forwards the stashed TapDown event after
tapDownTimer expiration, it should forward the next TapCancel event as
well to maintain a valid input stream. The rest of the tap ending events
should get suppressed till the next TapDown event.

BUG=674602
TEST=TapSuppressionControllerTest.GFCAckBeforeTapSufficientlyLateTapCancel

Review-Url: https://codereview.chromium.org/2613533003
Cr-Commit-Position: refs/heads/master@{#441396}

Former-commit-id: 4a0c0947e7f0432e2810c3b008f17a9136c4518f